--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <section id="itinerary-section">
         <div class="day-card">
-            <h2>Day 1: 4 Dec</h2>
+            <h2>Day 1: 12月4日</h2>
             <div class="weather" id="weather-day1">載入天氣中...</div>
             <div class="category"><h3>交通</h3><p>香港 → 台北桃園機場 (CX564 08:30/10:15)</p><p>專車接送至 NTSU 登記 (自行安排)</p><button class="nav-btn" onclick="navigateTo('台灣桃園國際機場')">導航至機場</button><button class="nav-btn" onclick="navigateTo('桃園台灣體育大學')">導航至 NTSU</button></div>
             <div class="category"><h3>餐飲</h3><p>午餐/晚餐: 自理</p></div>
@@ -56,28 +56,28 @@
             <p class="story">備註: 限新北市、台北市、桃園市，超時每小時 HK$400。</p>
         </div>
         <div class="day-card">
-            <h2>Day 2: 5 Dec</h2>
+            <h2>Day 2: 12月5日</h2>
             <div class="weather" id="weather-day2">載入天氣中...</div>
-            <div class="category"><h3>景點</h3><p>全日 NTSU 交流比賽 (專車接送)</p><p>桃園觀光夜市</p><button class="nav-btn" onclick="navigateTo('桃園台灣體育大學')">導航至 NTSU</button><button class="nav-btn" onclick="navigateTo('桃園觀光夜市')">導航至夜市</button><p class="story">40年歷史老攤位。 <span class="highlight-must-eat">必吃: 蚵仔煎、生炒花枝羮、大腸包小腸、牛舌餅、越南煎蝦餅、米糕粥、排骨酥麵、蜜汁燒烤、霸王豬腳、牛肉麵、黑人鼎邊趖、北港烤肉、白糖粿。</span> 傍晚前往避高峰。</p></div>
+            <div class="category"><h3>景點</h3><p>全日 NTSU 交流比賽 (專車接送)</p><p>桃園觀光夜市</p><button class="nav-btn" onclick="navigateTo('桃園台灣體育大學')">導航至 NTSU</button><button class="nav-btn" onclick="navigateTo('桃園觀光夜市')">導航至夜市</button><p class="story">40年歷史老攤位。 <span class="highlight-must-eat">必吃: 蚵仔煎、生炒花枝羮、大腸包小腸、牛舌餅、越南煎蝦餅、米糕粥、排骨酥麵、蜜汁燒烤、霸王豬腳、牛肉麵、黑人鼎邊趖、北港烤肉、白糖粿、吳土魠魚焿、烤馬鈴薯。</span> 傍晚前往避高峰。</p></div>
             <div class="category"><h3>餐飲</h3><p>早餐: 酒店；午餐: 自理；晚餐: 自理於夜市</p></div>
         </div>
         <div class="day-card">
-            <h2>Day 3: 6 Dec</h2>
+            <h2>Day 3: 12月6日</h2>
             <div class="weather" id="weather-day3">載入天氣中...</div>
             <div class="category"><h3>景點</h3><p>全日 NTSU 交流比賽 (專車接送)</p></div>
-            <div class="category"><h3>餐飲</h3><p>早餐: 酒店；午餐: 自理；晚餐: 自理於饗饗新莊店 (自助餐)</p><button class="nav-btn" onclick="navigateTo('饗饗新莊店')">導航至餐廳</button><p class="story">高端360度景觀。 <span class="highlight-must-order">必點: 生魚片、握壽司、烤蝦、熱炒、甜點、港式烤鴨、比目魚鰭邊肉、鮭魚肚、牛肉、干貝、雪蟹、羊排、牛肋、蝦、雞肉、壽司、松葉蟹腳。</span> 預約，1690 NTD/人。</p></div>
+            <div class="category"><h3>餐飲</h3><p>早餐: 酒店；午餐: 自理；晚餐: 自理於饗饗新莊店 (自助餐)</p><button class="nav-btn" onclick="navigateTo('饗饗新莊店')">導航至餐廳</button><p class="story">高端360度景觀。 <span class="highlight-must-order">必點: 生魚片、握壽司、烤蝦、熱炒、甜點、港式烤鴨、比目魚鰭邊肉、鮭魚肚、牛肉、干貝、雪蟹、羊排、牛肋、蝦、雞肉、壽司、松葉蟹腳、旭蟹、火焰燒酒蝦、蛤蜊湯、鮑魚粥。</span> 預約，1690 NTD/人。</p></div>
         </div>
         <div class="day-card">
-            <h2>Day 4: 7 Dec</h2>
+            <h2>Day 4: 12月7日</h2>
             <div class="weather" id="weather-day4">載入天氣中...</div>
             <div class="category"><h3>景點</h3><p>NTSU 交流比賽 (專車接送)</p><p>新富町文化市場</p><p>大稻埕商圈</p><p>大稻埕碼頭</p><p>四四南村簡單市集</p><p>cookie886 伴手禮</p><button class="nav-btn" onclick="navigateTo('新富町文化市場')">導航至市場</button><button class="nav-btn" onclick="navigateTo('大稻埕商圈')">導航至商圈</button><button class="nav-btn" onclick="navigateTo('大稻埕碼頭')">導航至碼頭</button><button class="nav-btn" onclick="navigateTo('四四南村簡單市集')">導航至市集</button><button class="nav-btn" onclick="navigateTo('cookie886')">導航至商店</button><p class="story">新富町1935年日治市場，古蹟文化樞紐。<span class="highlight-must-eat">必吃: 金和壽司、阿婆油飯、艋舺大豐魚丸店、阿婆油飯+糯米腸、大豐魚丸店雞捲+炸牛蒡、紅龜伯手工粿店、鹹光餅、紫米芋頭糕、周記肉粥。</span> 大稻埕古老街區，茶葉貿易中心。<span class="highlight-must-buy">必買: COFE喫茶「吃的台灣茶」、滋養和菓子草莓大福紅豆最中、林復振、李亭香、十字軒、龍月堂、義美食品、果醬、果乾、醬油、筆記本、路力草莓大福、8結蛋捲、惠珍軒堅果果乾。</span> <span class="highlight-must-eat">必吃: 林合發油飯、丸隆生魚行、賣麵炎仔、許仔豬腳麵線、大稻埕葉家肉粥、林合發油飯粿店、大稻埕魯肉飯、妙口四神湯。</span> 碼頭1851年建，貿易港口，現散步、騎車、看煙火。四四南村有機市集。<span class="highlight-must-eat">必吃: 四季春、地瓜乳酪、眷村腐乳雞腿、經典貝果、烤肉飯、榮嘉義傳統豆花。</span> <span class="highlight-must-buy">cookie886: 經典原味、可可、阿里山蜜香紅茶、黑騎士可可粉、金桶奶油、諾曼第奶油、茶味、巧克力、Selected臻藏小黑盒。</span></p></div>
             <div class="category"><h3>餐飲</h3><p>早餐: 酒店；午餐: 自理；晚餐: 自理於鼎王忠孝店 (火鍋)</p><button class="nav-btn" onclick="navigateTo('鼎王忠孝店')">導航至餐廳</button><p class="story"><span class="highlight-must-order">必點: 鴨血、豆腐、手工丸子、酸菜白肉鍋、伊比利豬、蟹肉、豬肉丸、牛肉片、玻璃麵、香菇、大腸頭、豬肚、上選牛小排、五花去骨鮮肥牛、梅花豬肉、鴛鴦滑。</span> 湯底麻辣或酸菜，預約。</p></div>
         </div>
         <div class="day-card">
-            <h2>Day 5: 8 Dec</h2>
+            <h2>Day 5: 12月8日</h2>
             <div class="weather" id="weather-day5">載入天氣中...</div>
             <div class="category"><h3>景點</h3><p>桃園忠烈祠暨神社文化園區</p><p>華泰名品城 Outlet</p><button class="nav-btn" onclick="navigateTo('桃園忠烈祠暨神社文化園區')">導航至園區</button><button class="nav-btn" onclick="navigateTo('華泰名品城')">導航至 Outlet</button><p class="story">忠烈祠1938年神社，台灣最完整日治神社，包含鳥居、參道、石燈籠、手水舍、社務所、拜殿、本殿。華泰美式露天 Outlet。<span class="highlight-must-buy">必買: YSL、PRADA、Tommy Hilfiger、Polo Ralph Lauren、NIKE、adidas、CHARLES & KEITH、SAINT LAURENT、BOTTEGA VENETA、BALENCIAGA、VERSACE、OMEGA、GREGOR、JIMMY CHOO、康寧餐具。</span> 早去避人群。</p></div>
-            <div class="category"><h3>交通</h3><p>台北桃園機場 → 香港 (CX473 13:35/20:40)</p><button class="nav-btn" onclick="navigateTo('台灣桃園國際機場')">導航至機場</button></div>
+            <div class="category"><h3>交通</h3><p>台北桃園機場 → 香港 (CX473 18:35/20:40)</p><button class="nav-btn" onclick="navigateTo('台灣桃園國際機場')">導航至機場</button></div>
             <div class="category"><h3>餐飲</h3><p>早餐: 酒店；午餐: 自理</p></div>
         </div>
     </section>
@@ -86,7 +86,7 @@
         <div class="day-card">
             <h2>航班資訊</h2>
             <p>去程: CX564 香港 → 台北 08:30-10:15</p>
-            <p>回程: CX473 台北 → 香港 13:35-20:40</p>
+            <p>回程: CX473 台北 → 香港 18:35-20:40</p>
             <p>查詢實時狀態。</p>
         </div>
     </section>
